<resources>
    <string name="app_name">Shorniverse</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">home</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home1">Home1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_home_nav">HomeNav</string>
    <string name="update_profile_photo">Update Profile Photo</string>
    <string name="delete_account">Delete account</string>
    <string name="user_name">User Name</string>
    <string name="Email_Address">Email Address</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="log_out">Log Out</string>
    <string name="Update">Update</string>
    <string name="payment">Payment</string>
    <string name="Cart">Cart</string>
    <string name="shipment">Shipment</string>
    <string name="Email_address">Email Address</string>
    <string name="Phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="reset">Reset</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="email_Address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="payment_info">Payment Info</string>
    <string name="card_Number">Card Number</string>
    <string name="firstname">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="Expire_date">Expire Date</string>
    <string name="Cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="email_AddreSS">Email Address</string>
    <string name="phone_Number">Phone Number</string>
    <string name="type_a_password">Type A Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="register">Register</string>
    <string name="sign_in">SIGN IN</string>
    <string name="Update_payment">Update Payment</string>
    <string name="card_number">Card Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_account">Update account</string>
    <string name="update_payment">Update Payment</string>
    <string name="update_payment_details">Update Payment Details</string>
    <string name="adidas_mars1_men_sshoes">Adidas Mars1 = Men\'sShoes</string>
    <string name="itemDescription">This Is the lates shoes of adidas. this is released in 2019 for men</string>
    <string name="additmprice">Price</string>
    <string name="additemdescription">Description</string>
    <string name="add_item_name">Item Name</string>
    <string name="post_ad">Post Ad</string>
    <string name="adidas_mars1_men_s_shoes">Adidas Mars1 - Men\'s shoes</string>
    <string name="pay_cart">Pay</string>
    <string name="add_image">Add Image</string>
    <string name="buy_cart">Buy</string>
    <string name="buy_home">Buy</string>
    <string name="buy_cart1">Cart</string>
    <string name="sell_home">Sell</string>
    <string name="account_home">Account</string>
    <string name="my_ads">My Ads</string>
    <string name="post_new_ad">Post New Ad</string>
    <string name="delete_ad">Delete Ad</string>
    <string name="update_ad">Update Ad</string>
    <string name="tavera_shoes_">Tavera Shoes</string>
    <string name="_3000lkr">3000Lkr</string>
    <string name="adidas_mars_1">Adidas Mars 1</string>
    <string name="_4500lkr">4500Lkr</string>
    <string name="white_canvas">White Canvas</string>
    <string name="_1500lkr">1500Lkr</string>
    <string name="tavera_shoes__">Tavera Shoes</string>
    <string name="_3000lkr_">3000Lkr</string>
    <string name="adidas_mars_1_">Adidas Mars 1</string>
    <string name="_4500lkr_">4500Lkr</string>
    <string name="adidas">Adidas</string>
    <string name="crtimg">CrtImg</string>
    <string name="continuebtn">Continue</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
</resources>
