<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart1"
    android:orientation="vertical"
    android:background="@drawable/group"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/GoToPay"
        android:background="@drawable/btn"
        android:text="@string/continuebtn"
        android:textColor="@color/white"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:id="@+id/DltCart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/cartbutton"
        android:src="@drawable/ic_delete_black_24dp"
        />

    <View
        android:layout_gravity="center_horizontal"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/viewbk"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="142dp">


    </View>
    <ImageView
        android:layout_marginTop="120dp"
        android:layout_marginLeft="50dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/tavera_shoes"/>

    <TextView
        android:layout_width="140dp"
        android:textSize="20dp"
        android:layout_height="60dp"
        android:text="@string/tavera_shoes_"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="160dp"
        android:textColor="@color/blue"
        />
    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/_3000lkr"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="170dp"/>


    <CheckBox
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="300dp"/>

    <View
        android:layout_gravity="center_horizontal"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/viewbk"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="142dp">


    </View>
    <ImageView
        android:layout_marginTop="300dp"
        android:layout_marginLeft="50dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/adidas_mars"/>

    <TextView
        android:layout_width="140dp"
        android:textSize="20dp"
        android:layout_height="60dp"
        android:text="@string/adidas_mars_1"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="160dp"
        android:textColor="@color/blue"
        />
    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/_4500lkr"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="170dp"/>


    <CheckBox
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="300dp"/>


    <View
        android:layout_gravity="center_horizontal"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/viewbk"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="142dp">


    </View>
    <ImageView
        android:layout_marginTop="470dp"
        android:layout_marginLeft="50dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/white_canvas"/>

    <TextView
        android:layout_width="140dp"
        android:textSize="20dp"
        android:layout_height="60dp"
        android:text="@string/white_canvas"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="170dp"
        android:textColor="@color/blue"
        />
    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/_1500lkr"
        android:layout_marginTop="510dp"
        android:layout_marginLeft="170dp"/>


    <CheckBox
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="300dp"/>


</RelativeLayout>

</androidx.core.widget.NestedScrollView>