<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account"
    android:background="@drawable/group">

    <View
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginBottom="83dp"
        android:layout_marginEnd="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="83dp"
        android:background="@drawable/viewbk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/propic"
        android:layout_width="184dp"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/accUN"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="128dp"
        android:layout_marginTop="253dp"
        android:background="@drawable/accbk"
        android:text="@string/user_name"
        app:layout_constraintBottom_toTopOf="@+id/UpdAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />


    <TextView
        android:id="@+id/accEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/accbk"
        android:text="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accUN" />

    <TextView
        android:id="@+id/accpn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="168dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/accbk"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accEmail"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/LogOut"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginBottom="108dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="200dp"

        android:layout_marginRight="8dp"
        android:layout_marginStart="200dp"
        android:background="@drawable/btnblue"
        android:text="@string/log_out"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/UpdAcc"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginBottom="108dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LogOut"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/accUN"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        app:layout_constraintEnd_toStartOf="@+id/accEmail"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/phone"
        app:layout_constraintEnd_toStartOf="@+id/accpn"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>