<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group"
    tools:context=".UpPayment"
    tools:layout_editor_absoluteY="25dp">

    <View
        android:id="@+id/view3"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/viewbk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768">


    </View>

    <TextView
        android:id="@+id/Uppay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_payment"
        android:textColor="@color/blue"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <EditText
        android:id="@+id/crdNo"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/editbk"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Uppay" />

    <EditText
        android:id="@+id/Fnames"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/namebk"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintEnd_toStartOf="@+id/lNames"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crdNo" />

    <EditText
        android:id="@+id/lNames"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/namebk"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crdNo" />

    <EditText
        android:id="@+id/Exdate"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/namebk"
        android:ems="10"
        android:hint="@string/expire_date"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintEnd_toStartOf="@+id/Cvvs"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fnames" />

    <EditText
        android:id="@+id/Cvvs"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/namebk"
        android:ems="10"
        android:hint="@string/cvv"
        android:inputType="textPersonName"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lNames" />

    <Button
        android:id="@+id/UpPaym"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Exdate" />

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btnblue"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cvvs" />

</androidx.constraintlayout.widget.ConstraintLayout>